[package]
name = "any_all_workaround"
description = ""
version = "0.1.0"
edition = "2021"
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/any_all_workaround/"
homepage = "https://docs.rs/any_all_workaround/"
repository = "https://github.com/hsivonen/any_all_workaround"

[dependencies]
cfg-if = "1.0"
